fix: card texts are wrapped unintentionally

--- a/app/(info-pages)/components/PricingSection/PricingSection.module.scss
+++ b/app/(info-pages)/components/PricingSection/PricingSection.module.scss
@@ -21,6 +21,14 @@
   p,
   b {
     overflow-wrap: anywhere;
+
+    @media screen and (width >= 200px) {
+      overflow-wrap: break-word;
+    }
+
+    @media screen and (width >= 300px) {
+      text-wrap: nowrap;
+    }
   }
 
   > div {
